# Portal

./: .gitmodules  CMakeLists.txt  README.md
CMakeModules/: CreateLaunchers.cmake
PortalCapture/: CMakeLists.txt
PortalCapture/include/: Application.h  CalibrationData.h  CameraCapture.h  DynamicallyScriptableQObject.h  ITripleBuffer.h  IWriteBuffer.h  MainController.h  MultiOpenGLBuffer.h  OpenGLTripleBuffer.h  PortalProcessor.h  ScriptInterface.h  SixFringeProcessor.h  SplatField.h  Utils.h  WebsocketStream.h
PortalCapture/src/: Application.cpp  Application.h  CMakeLists.txt  CalibrationData.cpp  CameraCapture.cpp  IContext.h  IOpenGLReadBuffer.h  IReadBuffer.h  ISharedGLContextFactory.h  ITripleBuffer.h  IWriteBuffer.h  MainController.cpp  MainController.h  MultiOpenGLBuffer.cpp  MultiOpenGLBuffer.h  OpenGLTripleBuffer.cpp  OpenGLTripleBuffer.h  PortalProcessor.cpp  ScriptInterface.cpp  ScriptInterface.h  SixFringeProcessor.cpp  SplatField.cpp  TriMesh.cpp  Utils.cpp  Utils.h  WebsocketStream.cpp
PortalCapture/src/Capture/: CameraCapture.cpp  CameraCapture.h
PortalCapture/src/Process/: CalibrationData.cpp  CalibrationData.h  PortalProcessor.cpp  PortalProcessor.h  SixFringeProcessor.cpp  SixFringeProcessor.h
PortalCapture/src/Shaders/: CMakeLists.txt  Coordinate2Holo.frag  Coordinate2Holo.vert  CoordinateRectifier.frag  CoordinateRectifier.vert  Fringe2Phase.frag  Fringe2WrappedPhase.frag  GammaErode.frag  HorizontalMedianFilter.frag  Phase2Coordinate.frag  Phase2Depth.frag  Rectifier.frag  RenderTexture.frag  Wrapped2Unwrapped.frag
PortalCapture/src/Stream/: WebsocketStream.cpp  WebsocketStream.h
PortalCapture/test/: CMakeLists.txt  CalibrationDataTest.cpp  MainControllerTest.cpp  ShaderTest.cpp
PortalNode/src/: Application.cpp  Application.h  CMakeLists.txt  GLUTGLContext.cpp  GLUTGLContext.h  GLUTManager.cpp  GLUTManager.h  IGLContext.h  PortalGLContext.cpp  PortalGLContext.h
PortalNode/src/Shaders/: CMakeLists.txt
Utils/BlendGenerator/: main.m
Utils/CameraConfigFiles/: Camera1.qs  Camera1.xml  PointGreyConfig.qs
Utils/InitScripts/: DualCam.js  DualCam.qs  SingleCam.js  SingleCam.qs
Utils/MoviePacker/: main.m
Utils/PatternGenerator/: NineFringe.m  OptimalTwoWaveFinder.m  SixFringe.m
Utils/PipelineTester/: fringe2phase.m  gDebuggerReadCSV.m  main.m  readPFM.m
Utils/TimerModule/: PassthroughTimingWithDropButton.ino
Utils/WebsocketConnector/: index.html
config/: Camera1Calibration.js  Camera1Config.js  Camera2Calibration.js  Camera2Config.js  DualCam.js  FileCameraConfig.js  LeftCameraCalibration.js  LeftCameraConfig.js  ProjectorCalibration.js  RightCameraCalibration.js  RightCameraConfig.js
include/: CameraCapture.h  DynamicallyScriptableQObject.h  ISharedGLContextFactory.h  MainController.h  MultiOpenGLBuffer.h  OpenGLTripleBuffer.h  PortalProcessor.h  ScriptInterface.h  SixFringeProcessor.h  TriMesh.h  Utils.h
src/: CMakeLists.txt  MainController.cpp  OpenGLTripleBuffer.cpp  PortalProcessor.cpp  ScriptInterface.cpp  SixFringeProcessor.cpp  SplatField.cpp  Utils.cpp  WebsocketStream.cpp
src/Shaders/: CMakeLists.txt  Coordinate2Holo.frag  Coordinate2Holo.vert  CoordinateRectifier.vert  CoordinateRectifierDepth.frag  CoordinateRectifierSplat.frag  Depth2Holo.frag  Fringe2WrappedPhase.frag  HorizontalMedianFilter.frag  MedianFilter3x3.frag  PassThrough.vert  PhaseFilter.frag  RenderTexture.frag  Wrapped2Unwrapped.frag
test/: CMakeLists.txt  FringeProcessorShaderTest.cpp  PortalProcessorShaderTest.cpp  PortalProcessorTest.cpp  ShaderTest.cpp  SixFringeProcessorTest.cpp  TestMain.cpp  TestUtils.h
test/data/: CMakeLists.txt  FlatCoordinateHolo.pfm  FlatCoordinateMap.pfm  Fringe1-30.pfm  Fringe2-39.pfm  LeftCamCoordinates.pfm  MergedCoordinates.pfm  MergedDepth.pfm  RightCamCoordinates.pfm  TestDataGenerator.m  TestMergingGenerator.m  Thumbs.db  UnwrappedPhase-30-39.pfm  WrappedPhaseComponents-30-39.pfm  writePFM.m
test/data/Capture1/: CMakeLists.txt  RightCameraCalibration.js
test/data/Capture2/: CMakeLists.txt
